# NiGL

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt  main.cpp
nigl/: CMakeLists.txt
nigl/src/: nigl.cpp  nigl.h  program.cpp  program.h  program.hxx
nigl/src/program/: CMakeLists.txt  program.cpp  program.h  shader_config.h  shader_utils.cpp  shader_utils.h
nigl/src/shader/: CMakeLists.txt  shader_config.h  shader_utils.cpp  shader_utils.h
nigl/src/utils/: keyboard.h  traits.h  wrappers.h
src/: CMakeLists.txt  main.cpp  nigl.cpp  nigl.h  program.h
src/shader/: CMakeLists.txt  shader_config.h  shader_utils.cpp
src/utils/: wrappers.h
